Fix navbar link spacing

--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -33,4 +33,10 @@
     color: $primary;
   }
 
+  button,
+  .nav-link {
+    margin: 0;
+    padding: 0;
+  }
+
 }
